--- a/styles/sass/partials/_intro.scss
+++ b/styles/sass/partials/_intro.scss
@@ -16,6 +16,7 @@
 	bottom: 30px;
 	right: 50px;
 	z-index: 1000;
+	padding: 10px;
 	display: flex;
 	flex-direction: column;
 
