--- a/styles/sass/partials/_mediaQueries.scss
+++ b/styles/sass/partials/_mediaQueries.scss
@@ -1,6 +1,6 @@
 @media only screen and (max-width: 1024px) {
 .top {
-	display: none;
+	// display: none;
 }
 }
 
