--- a/styles/sass/partials/_nav.scss
+++ b/styles/sass/partials/_nav.scss
@@ -8,7 +8,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 0;
     right: 0;
     background-color: #111;
@@ -94,5 +94,6 @@
   right: 0;
   font-size:3rem;
   cursor:pointer;
-  margin: 40px;
+  padding: 40px;
+  z-index: 1;
 }
